--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,44 @@
+beautifulsoup4==4.14.2
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+dash==3.3.0
+et_xmlfile==2.0.0
+Flask==3.1.2
+idna==3.11
+importlib_metadata==8.7.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.2
+lxml==6.0.2
+MarkupSafe==3.0.3
+narwhals==2.12.0
+nest-asyncio==1.6.0
+numpy==2.2.6
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.3
+plotly==6.5.0
+protobuf==6.33.1
 psycopg2-binary==2.9.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+retrying==1.4.2
+scikit-learn==1.7.2
+scipy==1.15.3
+six==1.17.0
+soupsieve==2.8
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+upstox-python-sdk==2.19.0
+urllib3==2.5.0
+uuid==1.30
+websocket-client==1.9.0
+Werkzeug==3.1.3
+zipp==3.23.0
