--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 gunicorn==21.2.0
 dash==3.3.0
+dash-bootstrap-components==2.0.4
 plotly==6.5.0
 Flask==3.1.2
 Werkzeug==3.1.3
@@ -27,3 +28,5 @@ joblib==1.5.2
 tqdm==4.67.1
 retrying==1.4.2
 typing_extensions==4.15.0
+
+waitress==3.0.2   # for local dev only, Render uses gunicorn
